[gd_scene load_steps=3 format=3 uid="uid://bbviiwf2ey7cw"]

[ext_resource type="Script" path="res://Code/UI/win_screen.gd" id="1_3srvn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rht2s"]
bg_color = Color(0.121569, 0.121569, 0.121569, 1)

[node name="win_screen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
offset_right = 640.0
offset_bottom = 360.0
script = ExtResource("1_3srvn")
id = "win_screen"

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(640, 360)
layout_mode = 0
offset_right = 640.0
offset_bottom = 360.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rht2s")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Congratulations"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Control" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(480, 256)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 24
text = "The test vessel is fully operational. All pertinant upgrades have been purchased. These vessels can now be safely deployed around the world in all oceans to help clean.

You may continue to collect an recycle the trash and debris that are remaining.

Thank you for playing!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="Control2" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_horizontal = 8

[node name="win_screen_btn_exit" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Main Menu"

[node name="win_screen_btn_close" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 32)
layout_mode = 2
size_flags_vertical = 4
text = "Close"

[node name="spacer" type="Control" parent="PanelContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
